Firefox Developer Edition 68.0b2

--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,12 @@
 # Portapps
-#core.dir = vendor/github.com/portapps/portapps
 core.dir = ../portapps
 
 # App
 app = firefox-developer
 app.name = Firefox Developer Edition
 app.type = archive
-app.version = 67.0b18
+app.version = 68.0b2
+app.homepage = https://www.mozilla.org/en-US/firefox
 
 # Portable app
 papp.id = ${app}-portable
