Set app.release

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ app = firefox-developer
 app.name = Firefox Developer Edition
 app.type = archive
 app.version = 70.0b6
+app.release = 20
 app.homepage = https://www.mozilla.org/en-US/firefox
 
 # Portable app
