Following a trademark violation report (#5), name and logo has been changed

--- a/build.properties
+++ b/build.properties
@@ -2,11 +2,11 @@
 core.dir = ../portapps
 
 # App
-app = firefox-developer
-app.name = Firefox Developer Edition
+app = phyrox-developer
+app.name = Phyrox Developer Edition
 app.type = archive
 app.version = 71.0b5
-app.release = 23
+app.release = 24
 app.homepage = https://www.mozilla.org/en-US/firefox
 
 # Portable app
