--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="firefox-developer" basedir=".">
+<project name="phyrox-developer" basedir=".">
 
-  <dirname property="app.basedir" file="${ant.file.firefox-developer}"/>
+  <dirname property="app.basedir" file="${ant.file.phyrox-developer}"/>
   <property name="build.properties" value="${app.basedir}/build.properties"/>
   <property file="${build.properties}"/>
 
