Firefox Developer Edition 89.0b15

--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ core.dir = ../portapps
 app = phyrox-developer
 app.name = Phyrox Developer Edition
 app.type = archive
-app.version = 88.0b5
-app.release = 40
+app.version = 89.0b15
+app.release = 41
 app.homepage = https://www.mozilla.org/en-US/firefox
 
 # Portable app
@@ -21,5 +21,5 @@ papp.folder = app
 atf.id = Firefox
 atf.win64.filename = ${atf.id}DevEditionSetup-${app.version}-win64
 atf.win64.ext = .exe
-atf.win64.url = http://ftp.mozilla.org/pub/devedition/releases/${app.version}/win64/en-US/Firefox%20Setup%20${app.version}.exe
+atf.win64.url = https://ftp.mozilla.org/pub/devedition/releases/${app.version}/win64/en-US/Firefox%20Setup%20${app.version}.exe
 atf.win64.assertextract = core/firefox.exe
